# scpi-exch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example_1.cpp
include/: const_string.hpp  register_type.hpp  scpi_api.h  scpi_export.h
include/common/: const_string.h  const_string.hpp  register_type.h  register_type.hpp
include/hardware/: hardware.h  hardware_exception.h
include/ieee488/: ieee488_constants.h  ieee488_io.h  ieee488_mnemonics.h  ieee488_registers_type.h
include/ieee4882/: ieee4882.h  ieee4882_constants.h  ieee4882_mnemonics.h  ieee4882_registers_type.h
include/io/: io.h  io_error.h
include/scpi/: scpi.h  scpi_base.h  scpi_base.hpp  scpi_channel_type.h  scpi_constants.h  scpi_current_subsystem.h  scpi_display_mnemonics.h  scpi_display_subsystem.h  scpi_error.h  scpi_exception.h  scpi_frequency_mnemonics.h  scpi_frequency_subsystem.h  scpi_input_mnemonics.h  scpi_input_subsystem.h  scpi_measure_mnemonics.h  scpi_measure_subsystem.h  scpi_mnemonics.h  scpi_output_mnemonics.h  scpi_output_subsystem.h  scpi_power_subsystem.h  scpi_registers_type.h  scpi_sense_bandwidth_mnemonics.h  scpi_sense_bandwidth_subsystem.h  scpi_sense_frequency_subsystem.h  scpi_sense_subsystem.h  scpi_sense_sweep_subsystem.h  scpi_source_current_subsystem.h  scpi_source_frequency_subsystem.h  scpi_source_level_commands.h  scpi_source_level_commands.hpp  scpi_source_level_mnemonics.h  scpi_source_marker_subsystem.h  scpi_source_power_subsystem.h  scpi_source_protection_commands.h  scpi_source_protection_commands.hpp  scpi_source_protection_mnemonics.h  scpi_source_subsystem.h  scpi_source_voltage_subsystem.h  scpi_status_mnemonics.h  scpi_status_subsystem.h  (+11 more)
socket_api/: CMakeLists.txt
socket_api/include/: socket_api_high.h  socket_api_low.h
socket_api/src/: socket_api_high.c  socket_api_low.c
src/hardware/: hardware.cpp  hardware_exception.cpp
src/ieee488/: ieee488_io.cpp  ieee488_mnemonics.cpp
src/ieee4882/: ieee4882.cpp  ieee4882_mnemonics.cpp
src/io/: io.cpp  io_error.cpp
src/scpi/: scpi.cpp  scpi_base.cpp  scpi_current_subsystem.cpp  scpi_display_subsystem.cpp  scpi_error.cpp  scpi_exception.cpp  scpi_frequency_subsystem.cpp  scpi_input_subsystem.cpp  scpi_measure_subsystem.cpp  scpi_mnemonics.cpp  scpi_output_subsystem.cpp  scpi_power_subsystem.cpp  scpi_sense_bandwidth_subsystem.cpp  scpi_sense_frequency_subsystem.cpp  scpi_sense_subsystem.cpp  scpi_sense_sweep_subsystem.cpp  scpi_source_current_subsystem.cpp  scpi_source_frequency_subsystem.cpp  scpi_source_marker_subsystem.cpp  scpi_source_power_subsystem.cpp  scpi_source_subsystem.cpp  scpi_source_voltage_subsystem.cpp  scpi_status_subsystem.cpp  scpi_sweep_subsystem.cpp  scpi_system_subsystem.cpp  scpi_trigger_subsystem.cpp  scpi_unit_subsystem.cpp  scpi_units_type.cpp  scpi_voltage_subsystem.cpp
